OpenLDAP 2.3 Change Log

OpenLDAP 2.3.20 Engineering
	Added libldap SASL workaround for broken LDAP servers

OpenLDAP 2.3.19 Release
	Fixed libldap disable DH key exchange with DH params (ITS#4354)
	Fixed libldap_r thread pool destroy hang (ITS#4349,ITS#4368)
	Fixed slapd slap_daemon destroy issue (ITS#4370)
	Fixed slapd-hdb livelock issue (ITS#4360)
	Fixed slapd-bdb/hdb auto-recovery issue (ITS#4361,ITS#4373)
	Fixed slapd-bdb/hdb BDB 4.4 compatibility issues (ITS#4362)
	Fixed slapo-ppolicy modify issue (ITS#4355)
	Fixed slapo-syncprov/pcache filter dup issue (ITS#4364)
	Fixed slapo-syncprov playlog nentries reset issue (ITS#4365)
	Build environment
		Fixed slaptools when --disable-debug (ITS#4351)
		Fixed slapd(8) solaris select(2) issue (ITS#4357)

OpenLDAP 2.3.18 Release
	Fixed slapd syncrepl variable used before set bug (ITS#4331)
	Updated slapd-meta retry capabilities (ITS#4328)
	Fixed slapd-bdb slapcat autorecover bug (ITS#4324)
	Fixed slapo-chain search limits (ITS#4336)
	Fixed slapo-pcache attrsets issues (ITS#4316)
	Fixed slapo-translucent connection destroy (ITS#4334)
	Fixed slapd-config handling of attribute options (ITS#4339)
	Fixed slapd-ldap idassert resource leak (ITS#4326)
	Fixed slapd-meta nretries issue (ITS#4059)
	Fixed slapd wake_listener loses wakes (ITS#4343)
	Fixed slapd connection manager issue (ITS#4338)
	Fixed slapd handling of old style configuration directives (ITS#4341)
	Removed slapd-bdb/hdb extraneous yields (ITS#3950)
	Build Environment
		Removed problematic Linux sched_yield(2) workarounds (ITS#3950)
	Documentation
		Updated release documents
		Updated misc. manual pages

OpenLDAP 2.3.17 Release
	Fixed slapd anonymous proxy authorization issue (ITS#4320)
	Fixed slapd-ldap/meta session reuse issue (ITS#4315)
	Fixed slapd-ldap idassert anon-to-anon issue (ITS#4321)
	Fixed slapd-monitor thread issue (ITS#4318)
	Build environment
		Updated Linux sched_yield(2) workaround to use nanosleep(2) (ITS#3950)
		Fixed configure report-to URL
